<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Scouting 2022</string>

    <string name="sendData">Send Data</string>
    <string name="tbaData">TBA</string>
    <string name="submitInitials">Submit</string>

    <string name="mainAuthor">Developed by FRC Team 107</string>

    <string name="concatenateMatch">Concatenate Match</string>
    <string name="concatenatePit">Concatenate Pit</string>
    <string name="concatFolder">Enter concatenation folder name</string>

    <!--Auton Strings-->
    <string name="teamNumberHeading">Team Number</string>
    <string name="matchNumberHeading">Match Number</string>
    <string name="initiationLineHeading">Initiation Line</string>

    <string name="autonInnerPowerCellsScored"># of inner power cells </string>
    <string name="autonOuterPowerCellsScored"># of outer power cells </string>
    <string name="autonBottomPowerCellsScored"># of bottom power cells</string>

    <string name="leftStarting">Left</string>
    <string name="centerStarting">Center</string>
    <string name="rightStarting">Right</string>
    <string name="farRightStarting">Far Right</string>

    <string name="baselineCrossHeading">Baseline</string>
    <string name="successBaseline">Success</string>
    <string name="failBaseline">Fail</string>
    <string name="notAttemptedBaseline">N/A</string>

    <string name="cubeInSwitchHeading">Cube in Switch</string>
    <string name="successSwitch">Success</string>
    <string name="failSwitch">Fail</string>
    <string name="notAttemptedSwitch">N/A</string>
    <string name="wrongSideSwitch">Wrong Side</string>

    <string name="cubeInScaleHeading">Cube in Scale</string>
    <string name="successScale">Success</string>
    <string name="failScale">Fail</string>
    <string name="notAttemptedScale">N/A</string>
    <string name="wrongSideScale">Wrong Side</string>

    <string name="saveButton">Save</string>


    <!--Auton Error Strings-->

    <string name="teamNumberError">Enter in team number</string>
    <string name="matchNumberError">Enter in match number</string>
    <string name="autonInnerPortError">Enter # for Inner Port</string>
    <string name="autonOuterPortError">Enter # for Outer Port</string>
    <string name="autonBottomPortError">Enter # for Bottom Port</string>

    <!--Teleop Strings-->
    <string name="teleopHighHub"># of balls in high hub </string>
    <string name="teleopLowHub"># of balls in low hub </string>
    <string name="teleopBottomPowerCellsScored"># of bottom power cells </string>

    <string name="ShotLocation">Shot Location</string>
    <string name="Fixed">Fixed</string>
    <string name="Variable">Variable</string>

    <string name="controlPanelHeading">Control Panel</string>
    <string name="controlPanelStage2">Stage 2</string>
    <string name="controlPanelStage3">Stage 3</string>
    <string name="controlPanelNotAttempted">N/A</string>

    <string name="speedHeading">Speed of robot</string>
    <string name="notMoving">Did not move</string>
    <string name="slow">Slow</string>
    <string name="medium">Medium</string>
    <string name="fast">Fast</string>

    <string name="climbTimeHeading">Climb Time</string>

    <string name="defenseHeading">Defense</string>
    <string name="effectiveDefense">Effective</string>
    <string name="ineffectiveDefense">Ineffective</string>
    <string name="receivedFoulsDefense">Fouled</string>
    <string name="noDefense">N/A</string>

    <string name="fouls">Fouls</string>
    <string name="nextButton">Move To Teleop</string>

    <string name="scouterInitials">Scouter Initials</string>

    <string name="defenseTeamHeading"># of defensive team</string>


    <!--Teleop Error Strings-->
    <string name="teleopInnerPowerCellError">Enter # of cells in inner port</string>
    <string name="teleopOuterPowerCellError">Enter # of cells in outer port</string>
    <string name="teleopBottomPowerCellError">Enter # of cells in bottom port</string>
    <string name="scouterInitialsError">Enter scouter initials</string>


    <!--Menu Strings-->
    <string name="matchScouting">Match</string>
    <string name="pitScouting">Pit</string>

    <!--Pit Scouting Strings-->
    <string name="pitTeamNumberHeading">Team Number</string>

    <string name="pitTeleopPreference">Teleop Preference</string>
    <string name="pitTeleopTop">Top</string>
    <string name="pitTeleopBottom">Bottom</string>
    <string name="pitTeleopDefense">Defense</string>

    <string name="pitCargoTop">Avg # of cargo in high hub</string>
    <string name="pitCargoBottom">Avg # of cargo in low hub</string>

    <string name="pitClimbLevel">Climb level</string>
    <string name="pitClimbLevelLowRung">Low rung</string>
    <string name="pitClimbLevelMediumRung">Medium rung</string>
    <string name="pitClimbLevelHighRung">High rung</string>
    <string name="pitClimbLeveTraversalrung">Traversal rung</string>
    <string name="pitClimbLevelNotAttempted">N/A</string>

    <string name="pitWeight">Weight?</string>
    <string name="pitSize">Size?</string>

    <string name="pitClimbBoolean">Climb?</string>
    <string name="pitClimbYes">Yes</string>
    <string name="pitClimbNo">No</string>

    <string name="pitRobotComment">Extra Comments</string>

    <string name="pitProgrammingLanguage">Programming Language</string>
    <string name="pitJava">Java</string>
    <string name="pitCpp">C++</string>
    <string name="pitLabview">LabVIEW</string>
    <string name="pitOther">Other</string>

    <string name="pitStormTrooperShots"># of shots from Storm Trooper to kill robot?</string>
    <string name="savePitButton">Save</string>

    <string name="takePhotoButton">Take Photo</string>

    <!--Pit Error Strings-->
    <string name="pitTeamNumberError">Enter team number</string>
    <string name="pitPowerCellTopError">Enter average top power cell number</string>
    <string name="pitPowerCellBottomError">Enter average bottom power cell number</string>
    <string name="pitWeightError">Enter robot weight</string>
    <string name="pitStormTrooperShotsError">Enter # of Storm Trooper shots</string>
    <string name="climbLevel">Climb level</string>
    <string name="lowRung">Low rung</string>
    <string name="midRung">Mid rung</string>
    <string name="highRung">High rung</string>
    <string name="failed">Failed</string>
    <string name="traversalRung">Traversal rung</string>
    <string name="speed_climbheading">Speed of robot climb</string>
    <string name="pitSizeError">Enter # of robot size</string>
</resources>